fix: fix alignment in home page

--- a/index_style.css
+++ b/index_style.css
@@ -72,7 +72,7 @@
 .main_content h1 {
   color: #440D0F;
   font-family: 'Inknut Antiqua';
-  font-size: 60px;
+  font-size: 8vh;
   letter-spacing: -5px;
   line-height: 0.3;
 }
@@ -80,7 +80,7 @@
 .main_content h2 {
   color: #440D0F;
   font-family: 'Inknut Antiqua';
-  font-size: 16px;
+  font-size: 2.2vh;
   font-weight: 300;
   letter-spacing: -2px;
 }
@@ -88,7 +88,7 @@
 .main_content p {
   color: #191716;
   font-family: 'Cardo';
-  font-size: 18px;
+  font-size: 2.5vh;
 }
 
 #main_image_index__circle {
